--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img src="./assets/profile-pic.png" alt="profile picture" />
+        <img 
+        class="profile-img"
+        src="./assets/1341111952.jpg" alt="profile picture" />
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
@@ -47,7 +49,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/resume-example.pdf')"
+            onclick="window.open('./assets/resume.pdf')"
           >
             Download CV
           </button>
@@ -77,7 +79,7 @@
       <div class="section-container">
         <div class="section__pic-container">
           <img
-            src="./assets/about-pic.png"
+            src="./assets/yanan.jpg"
             alt="Profile picture"
             class="about-pic"
           />
@@ -159,7 +161,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>SASS</h3>
+                  <h3>React</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
@@ -171,7 +173,7 @@
                 />
                 <div>
                   <h3>JavaScript</h3>
-                  <p>Proficient</p>
+                  <p>Intermediate</p>
                 </div>
               </article>
               <article>
@@ -230,7 +232,18 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Node JS</h3>
+                  <h3>AWS</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>MongoDB</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
