--- a/index.html
+++ b/index.html
@@ -309,15 +309,15 @@
               </button>
             </div>
           </div>
-          <div class="details-container color-container">
+          <div class="details-container color-container project-container">
             <div class="article-container">
               <img
-                src="./assets/project-2.png"
+                src="./assets/celebrity.png"
                 alt="Project 2"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project Two</h2>
+            <h2 class="experience-sub-title project-title">Hackthon Project: Celebrity Face</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -327,7 +327,7 @@
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://hackthon-nu.vercel.app/'"
               >
                 Live Demo
               </button>
@@ -341,7 +341,7 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project Three</h2>
+            <h2 class="experience-sub-title project-title">DreamBags</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
