--- a/index.html
+++ b/index.html
@@ -336,27 +336,28 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-3.png"
+                src="./assets/bandsite.png"
                 alt="Project 3"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">DreamBags</h2>
+            <h2 class="experience-sub-title project-title">BandSite</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/yanan926/bandsite'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://yanan926.github.io/bandsite/index.html'"
               >
                 Live Demo
               </button>
             </div>
           </div>
+          
         </div>
       </div>
       <img
