add the github link

--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://wander-hub.vercel.app/'"
+                onclick="location.href='https://github.com/yanan926/WanderHub'"
               >
                 Github
               </button>
@@ -321,7 +321,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/yanan926'"
+                onclick="location.href='https://github.com/yanan926/hackthon'"
               >
                 Github
               </button>
